--- a/view_events.html
+++ b/view_events.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8" />
     <title>View events</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="view_events.js"></script>
+    <script type="text/javascript" src="view_events.js?newversion"></script>
 </head>
 
 <body>
     <h1>View events</h1>
     <button><a href="dashboard.php" class="button">Back</a></button>
+    <pre id="events">
+
+    </pre>
 </body>
 
-<pre id="preTag"></pre>
 
 </html>
