--- a/view_events.html
+++ b/view_events.html
@@ -5,15 +5,23 @@
     <meta charset="UTF-8" />
     <title>View events</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="view_events.js?newversion"></script>
+    <script type="text/javascript" src="view_events.js"></script>
 </head>
 
 <body>
     <h1>View events</h1>
     <button><a href="dashboard.php" class="button">Back</a></button>
-    <pre id="events">
+    <pre><p><h2>Event Name                                           Event ID</h2></p></pre>
+    <br></br>
+    <table id="TableA" dir="ltr" width="1000">
 
-    </pre>
+        <tr>
+
+        </tr>
+
+    </table>
+
+
 </body>
 
 
