--- a/more_details.html
+++ b/more_details.html
@@ -9,7 +9,7 @@
 <body>
 <h1>View events</h1>
 <button><a href="view_events.html" class="button">Back</a></button>
-<pre><p><h2>Event Name                                           Event ID</h2></p></pre>
+<pre><p><h3>Event Name                     Event ID  Cluster       Machine Group            Date               Time</h3></p></pre>
 <br></br>
 <table id="TableA" dir="ltr" width="1000">
 
