--- a/more_details.html
+++ b/more_details.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Event Details</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="more_details.js"></script>
+    <script type="text/javascript" src="more_details.js?newversion"></script>
 </head>
 <body>
 <h1>View events</h1>
 <button><a href="view_events.html" class="button">Back</a></button>
-<pre><p><h3>Event Name                     Event ID  Cluster       Machine Group            Date               Time</h3></p></pre>
+<pre><p><h5>Event Name                 Event ID  Cluster       Machine Group            Date               Time</h5></p></pre>
 <br></br>
 <table id="TableA" dir="ltr" width="1000">
 
