--- a/view_events.html
+++ b/view_events.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <title>View events</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="view_events.js"></script>
+    <script type="text/javascript" src="view_events.js?swaggg"></script>
 </head>
 
 <body>
     <h1>View events</h1>
     <button><a href="dashboard.php" class="button">Back</a></button>
-    <pre><p><h2>Event Name                                           Event ID</h2></p></pre>
+    <pre><p><h2>Event Name                    Event ID</h2></p></pre>
     <br></br>
     <table id="TableA" dir="ltr" width="1000">
 
