--- a/view_events.html
+++ b/view_events.html
@@ -6,21 +6,26 @@
     <title>View events</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="view_events.js?swaggg"></script>
+    <script type="text/javascript" src="view_events.js?swaggg4"></script>
 </head>
 
 <body>
-    <h1>View events</h1>
-    <button><a href="dashboard.php" class="button">Back</a></button>
-    <pre><p><h2>Event Name                    Event ID</h2></p></pre>
-    <br></br>
-    <table id="TableA" dir="ltr" width="1000">
+<h1>View events</h1>
+<button><a href="dashboard.php" class="button">Back</a></button>
+<br></br>
+<form id="search_form" method="post">
+    <input type="text" name="event_name" id="event_name" class="form-control" style="width: 540px"/>
+    <input type="submit" name="search" id="search_button" value="search" class="btn btn-primary"/>
+</form>
+<pre><p><h2>Event Name                    Event ID</h2></p></pre>
+<br></br>
+<table id="TableA" dir="ltr" width="1000">
 
-        <tr>
+    <tr>
 
-        </tr>
+    </tr>
 
-    </table>
+</table>
 
 
 </body>
